# fashion-recommendation-system

./: LICENSE  README.md  Untitled46_(2) (1).ipynb
fashion recommandation backend/: app.py  pyproject.toml
fashion recommandation backend/preprocessing/json/test_data.json/: elastic.ndjson  filtered.ndjson  filtered_data2.json
fashion recommandation frontend/frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
fashion recommandation frontend/frontend/app/: globals.css  layout.tsx  page.tsx
fashion recommandation frontend/frontend/app/(actions)/: cloudinary.ts  elastic.ts  groq.ts
fashion recommandation frontend/frontend/app/providers/: providers.tsx
fashion recommandation frontend/frontend/app/results/[url]/: page.tsx
fashion recommandation frontend/frontend/app/search/: page.tsx
fashion recommandation frontend/frontend/app/types/: env.types.d.ts
fashion recommandation frontend/frontend/app/upload/: page.tsx
fashion recommandation frontend/preprocessing/json/test_data.json/: create.py  el.py  elastic.py  filtered_data.json  filtered_watches.json  filtered_watches.ndjson  test_data.json  valid_data.json
fashion recommandation frontend/preprocessing/notebook/: bnd.ipynb
fashion recommandation frontend/router/: router.py
fashion recommandation frontend/utils/: utils.py
