[project]
name = "adit"
version = "0.1.0"
description = ""
authors = [
    {name = "Sarthakdevil",email = "Sarthakrajesh2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pendulum (>=3.0.0,<4.0.0)",
    "groq (>=0.18.0,<0.19.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
